 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'

  
 sourceCompatibility = 1.8
 
 version = '0.2.1'
 sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}
 
 jar {
     	 manifest {
		 attributes ('Manifest-Version': '1.0',
                    'Implementation-Title': 'Proven Client',
                    'Implementation-Version': version,
                    'Bundle-Name': 'proven-client',
                    'Bundle-SymbolicName': 'proven-client',
                    'Bundle-Version': version,
                    'Created-By': '1.8.0_161 (Oracle Corporation)',
                    'Export-Package': 'gov.pnnl.proven.api.producer;version="0.2.1"',
                    'Import-Package': 'org.slf4j;version="[1.6,2)",gov.pnnl.proven.message;version="0.2",javax.ws.rs.client;version="[2.1,3)"',
                    'Require-Capability': 'osgi.ee;filter:="(&(osgi.ee=JavaSE)(version=1.8))"',
                    'Tool': 'Bnd-3.5.0.201709291849')
	 }
	 
	 
	 
	 
	 
 }
 
 task javadocsAll(type: Javadoc) {
   source = sourceSets.main.allJava
   classpath = configurations.compile
   options.memberLevel = JavadocMemberLevel.PRIVATE
 }
 

task createJar(type: Jar) {
	baseName = project.name + '-all'
    
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

task sourceJar(type: Jar) {
   from sourceSets.main.allJava
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'gov.pnnl.proven.api.producer.ProvenProducer'
    }
    baseName = project.name + '-all-in-one-jar'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
    
 publishing {
    publications {
        mavenJava(MavenPublication) {
        	groupId 'gov.pnnl.proven'
        	artifactId 'proven-client' 
            from components.java
            
            artifact sourceJar {
               classifier "sources"
            }
        }
    }
}
 
 repositories {
	 mavenCentral()
	 mavenLocal()
 }
 
 dependencies {
	 compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
	 compile group: 'gov.pnnl.proven', name: 'proven-message', version: '0.4'
	 compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
	 compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
	 compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
	 compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
	 compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'	 
	 compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'	
	 
	 
	 compile group: 'org.apache.activemq', name: 'activemq-rar', version: '5.11.2'
	 testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
 test {
	 systemProperties 'property': 'value'
 }
 
 uploadArchives {
	 repositories {
		flatDir {
			dirs 'repos'
		}
	 }
 }
 